--- a/index.html
+++ b/index.html
@@ -16,10 +16,6 @@
     <div class="container">
      <div class="logo"><span class="wsite-logo">
 
-	<a href="/">
-		<img src="/uploads/3/8/2/8/38280181/1465951194.png" style="margin-top:10px;margin-left:30px;" />
-	</a>
-
 </span></div>
       <div class="nav desktop-nav"><ul class="wsite-menu-default">
 		<li id="active" class="wsite-menu-item-wrap">
@@ -27,17 +23,17 @@
 					href="/"
 				class="wsite-menu-item"
 				>
-				Portfolio
+				Link
 			</a>
 			
 		</li>
 		<li id="pg210413125268384374" class="wsite-menu-item-wrap">
 			<a
-					href="https://www.teepublic.com/user/bearddesign"
+					href=""
 					target="_blank"
 				class="wsite-menu-item"
 				>
-				T-Shirts
+				Link
 			</a>
 			
 		</li>
@@ -46,7 +42,7 @@
 					href="/discord-material-theme.html"
 				class="wsite-menu-item"
 				>
-				Discord Material theme
+				Themes
 			</a>
 			
 		</li>
@@ -55,7 +51,7 @@
 					href="/beard-fizzy-and-noahs-contest.html"
 				class="wsite-menu-item"
 				>
-				Beard, Fizzy and Noah's contest
+				Link
 			</a>
 			
 		</li>
@@ -69,7 +65,7 @@
      <div class="container">
       <div class="banner">
       <h2><span class="wsite-text wsite-headline">
-	<strong><font size="3">Hi, I'm Beard Design, a &nbsp;professional graphic designer and motion designer.</font></strong>
+	<strong><font size="3">test.</font></strong>
 </span></h2>
      </div>
 	 <div >​<div style="text-align:left;"><div style="height:0px;overflow:hidden"></div>
