--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en-us">
   <head>
     <meta charset="UTF-8">
-    <title>0mniscient.GitHub.io by 0mniscient</title>
+    <title>Omni</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-
-
+<body>
+  
+  
+  
+  
+  
+</body>
 </html>
