--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en" class="page-home gr__devtipsshow_com">
   <head>
     <meta charset="UTF-8">
     <title>Omni</title>
