--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
 <body>
   
   <div class="top-rect"></div>
+  <header><svg class="devtips-logo-svg" width="50px" height="40px" viewBox="0 0 50 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"></g>
+</svg>
+<svg class="menu-svg" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+    <path d="M0 0h24v24H0z" fill="none"></path>
+    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
+</svg>
+
+    </header>
+    <section class="home-hero">
+      <div class="flex-container"> 
+        <div class="flex-about-content">
+          <hr class="section-title-rule">
+          <div class="mission">The education and training to change your circumstances and take control of your future.</div>
+          <hr class="section-title-rule bottom">
+        </div>
+        <div class="flex-video-right">
+          <div class="flex-video-wrap">
+            <div class="flex-video"><iframe src="http://www.youtube.com/embed/swcKGCX2Aos?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe></div>
+          </div>
+          <p style="max-width: 300px" class="muted-extra"><span class="black">Video above:</span> I ask six talented creators what advice they would give their younger selves.</p>
+        </div>
+      </div>
+    </section>
   
 </body>
 </html>
