--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
       <div class="flex-container"> 
         <div class="flex-about-content">
           <hr class="section-title-rule">
-          <div class="mission">The education and training to change your circumstances and take control of your future.</div>
+          <div class="mission">Hello I am Omniscient and I made this site to show off some basic Discord Themes.</div>
           <hr class="section-title-rule bottom">
         </div>
         <div class="flex-video-right">
           <div class="flex-video-wrap">
             <div class="flex-video"><iframe src="http://www.youtube.com/embed/swcKGCX2Aos?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe></div>
           </div>
-          <p style="max-width: 300px" class="muted-extra"><span class="black">Video above:</span> I ask six talented creators what advice they would give their younger selves.</p>
+          <p style="max-width: 300px" class="muted-extra"><span class="black">Picture Above:</span> This is Discord the replacement to skype,teamviewer,curse etc.</p>
         </div>
       </div>
     </section>
