--- a/index.html
+++ b/index.html
@@ -44,5 +44,18 @@
       </div>
     </section>
   
+  <section class="what-is-devtips">
+      <div class="constrainer">
+        <div class="section-head">What is DevTips?</div>
+        <hr class="section-title-rule">
+        <div class="media-object">
+          <div class="media"><img src="https://ci5.googleusercontent.com/proxy/AaZXsl9_ruMCGZrO6LVVcCg5qr82Ti86mO-hGHy2ioUj7wbkNJp5niE5p6GDGVfpb4Z9X3Am-dOK84ShwqK2vyO1x_GjxNbdYeB7QG5NHLAJawEloHQa_0wrRTnfTtOLYHTHJWiJnbbxyA7y07-zTqSxkSDjOt-HRj1Qow0=s0-d-e1-ft#https://gallery.mailchimp.com/2abae111d44df144b3b3986bc/images/cd92ba3c-ecf7-4268-b153-181559b6ea28.jpg" class="avatar"></div>
+          <div class="content">
+            <p>DevTips is a <a href="https://www.youtube.com/user/DevTipsForDesigners">weekly YouTube show</a> that focuses on web development and design, hosted by <a href="http://travisneilson.com">Travis Neilson</a>.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+  
 </body>
 </html>
