--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="section-head">Who is Omniscient?</div>
         <hr class="section-title-rule">
         <div class="media-object">
-          <div class="media"><img src="https://ci5.googleusercontent.com/proxy/AaZXsl9_ruMCGZrO6LVVcCg5qr82Ti86mO-hGHy2ioUj7wbkNJp5niE5p6GDGVfpb4Z9X3Am-dOK84ShwqK2vyO1x_GjxNbdYeB7QG5NHLAJawEloHQa_0wrRTnfTtOLYHTHJWiJnbbxyA7y07-zTqSxkSDjOt-HRj1Qow0=s0-d-e1-ft#https://gallery.mailchimp.com/2abae111d44df144b3b3986bc/images/cd92ba3c-ecf7-4268-b153-181559b6ea28.jpg" class="avatar"></div>
+          <div class="media"><img src="https://imgur.com/0lSBAAu.png" class="avatar"></div>
           <div class="content">
             <p>I am a person who really doesn't do anything and plays with CSS and customizes websites.</p>
           </div>
