--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
     </section>
   
-  <section class="what-is-devtips">
+  <section class="who-is-omni">
       <div class="constrainer">
         <div class="section-head">Who is Omniscient?</div>
         <hr class="section-title-rule">
@@ -53,6 +53,50 @@
           <div class="content">
             <p>I am a person who really doesn't do anything and plays with CSS and customizes websites.</p>
           </div>
+        </div>
+      </div>
+    </section>
+    
+  <section class="popular-episodes tint"><svg class="arc-svg" viewBox="0 0 1440 69" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+        <path d="M1440,69.0315425 L1440,0 L0,0 L0,69.0315425 C233.264983,25.0227325 473.943868,2 720,2 C966.056132,2 1206.73502,25.0227325 1440,69.0315425 Z" id="Combined-Shape"></path>
+    </g>
+</svg>
+
+      <div class="constrainer">
+        <div class="section-head">Discord Themes <span>Free!</span></div>
+        <hr class="section-title-rule">
+        <div class="popular-list"><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4KQZUkRjfwMmTq_f1fbxerI" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/VcMjo_wczCc/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">How to Build a Responsive Website from Start to Finish</div>
+                      <div class="muted-extra meta">26 videos • 10hrs 46min</div>
+                    </div></a><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4IyCbhul-PdeiDqmh4ooJzk" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/STwoa-9jxi0/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">Parallax on the Web</div>
+                      <div class="muted-extra meta">10 videos • 3hrs 7min</div>
+                    </div></a><a href="https://www.youtube.com/watch?v=OFDAGiPJHL8" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/OFDAGiPJHL8/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">Advice and Crap for Young Creators</div>
+                      <div class="muted-extra meta">1 video • 8min</div>
+                    </div></a><a href="https://www.youtube.com/watch?v=G7EIAgfkhmg" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/G7EIAgfkhmg/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">CSS FlexBox Essentials</div>
+                      <div class="muted-extra meta">2 videos • 1hr 6 min</div>
+                    </div></a><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4KeBN2krBtcO3U90_7SOl-A" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/sJhhLvW-Xvg/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">Design + Code my Personal Website in 12 hours</div>
+                      <div class="muted-extra meta">28 videos • 12hrs 31 min</div>
+                    </div></a><a href="https://www.youtube.com/watch?v=QLbUzwxkwHA" class="video-unit">
+                    <div class="media"><img src="https://i.ytimg.com/vi/QLbUzwxkwHA/mqdefault.jpg"></div>
+                    <div class="desc"> 
+                      <div class="title">My First Websites Were Horrible!</div>
+                      <div class="muted-extra meta">1 video • 18min</div>
+                    </div></a>
         </div>
       </div>
     </section>
