--- a/index.html
+++ b/index.html
@@ -67,36 +67,23 @@
         <div class="section-head">Discord Themes <span>Free!</span></div>
         <hr class="section-title-rule">
         <div class="popular-list"><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4KQZUkRjfwMmTq_f1fbxerI" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/VcMjo_wczCc/mqdefault.jpg"></div>
+                    <div class="media"><img src="https://a.pomf.cat/vvjkzd.png"></div>
                     <div class="desc"> 
                       <div class="title">How to Build a Responsive Website from Start to Finish</div>
                       <div class="muted-extra meta">26 videos • 10hrs 46min</div>
                     </div></a><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4IyCbhul-PdeiDqmh4ooJzk" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/STwoa-9jxi0/mqdefault.jpg"></div>
+                    <div class="media"><img src="https://a.pomf.cat/qtoppj.png"></div>
                     <div class="desc"> 
                       <div class="title">Parallax on the Web</div>
                       <div class="muted-extra meta">10 videos • 3hrs 7min</div>
                     </div></a><a href="https://www.youtube.com/watch?v=OFDAGiPJHL8" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/OFDAGiPJHL8/mqdefault.jpg"></div>
+                    <div class="media"><img src="https://a.pomf.cat/swuofs.jpg"></div>
                     <div class="desc"> 
                       <div class="title">Advice and Crap for Young Creators</div>
                       <div class="muted-extra meta">1 video • 8min</div>
                     </div></a><a href="https://www.youtube.com/watch?v=G7EIAgfkhmg" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/G7EIAgfkhmg/mqdefault.jpg"></div>
+                    <div class="media"><img src="https://i.imgur.com/lPdrdDe.png"></div>
                     <div class="desc"> 
-                      <div class="title">CSS FlexBox Essentials</div>
-                      <div class="muted-extra meta">2 videos • 1hr 6 min</div>
-                    </div></a><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4KeBN2krBtcO3U90_7SOl-A" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/sJhhLvW-Xvg/mqdefault.jpg"></div>
-                    <div class="desc"> 
-                      <div class="title">Design + Code my Personal Website in 12 hours</div>
-                      <div class="muted-extra meta">28 videos • 12hrs 31 min</div>
-                    </div></a><a href="https://www.youtube.com/watch?v=QLbUzwxkwHA" class="video-unit">
-                    <div class="media"><img src="https://i.ytimg.com/vi/QLbUzwxkwHA/mqdefault.jpg"></div>
-                    <div class="desc"> 
-                      <div class="title">My First Websites Were Horrible!</div>
-                      <div class="muted-extra meta">1 video • 18min</div>
-                    </div></a>
         </div>
       </div>
     </section>
