--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
       <div class="constrainer">
         <div class="section-head">Discord Themes <span>Free!</span></div>
         <hr class="section-title-rule">
-        <div class="popular-list"><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4KQZUkRjfwMmTq_f1fbxerI" class="video-unit">
+        <div class="popular-list"><a href="" class="video-unit">
                     <div class="media"><img src="https://a.pomf.cat/vvjkzd.png"></div>
-                    <div class="desc">KMS🏻</div></a><a href="https://www.youtube.com/playlist?list=PLqGj3iMvMa4IyCbhul-PdeiDqmh4ooJzk" class="video-unit">
+                    <div class="desc">KMS🏻</div></a><a href="" class="video-unit">
                     <div class="media"><img src="https://a.pomf.cat/qtoppj.png"></div>
-                    <div class="desc">A theme just for princesses 👸🏻 </div></a><a href="https://www.youtube.com/watch?v=OFDAGiPJHL8" class="video-unit">
+                    <div class="desc">A theme just for princesses 👸🏻 </div></a><a href="" class="video-unit">
                     <div class="media"><img src="https://a.pomf.cat/swuofs.jpg"></div>
-                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></a><a href="https://www.youtube.com/watch?v=G7EIAgfkhmg" class="video-unit">
+                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></a><a href="" class="video-unit">
                     <div class="media"><img src="https://i.imgur.com/lPdrdDe.png"></div>
                     <div class="desc">A cozy modern dark theme most time ever spent on a theme. 98% of the theme darkened like it should be.</div>
         </div>
