--- a/index.html
+++ b/index.html
@@ -19,14 +19,9 @@
 <body>
   
   <div class="top-rect"></div>
-  <header><svg class="devtips-logo-svg" width="50px" height="40px" viewBox="0 0 50 40" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-  <g id="Page-1" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"></g>
-</svg>
-<svg class="menu-svg" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-    <path d="M0 0h24v24H0z" fill="none"></path>
-    <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
-</svg>
-
+  <header><div class="headerimg"><center>
+  <img src="https://imgur.com/0lSBAAu.png" class="headeravatar"></center>
+</div>
     </header>
     <section class="home-hero">
       <div class="flex-container"> 
