--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
           <div class="mission">Hello I am Omniscient and I made this site to show off some basic Discord Themes.</div>
           <hr class="section-title-rule bottom">
         </div>
-        <div class="flex-video-right">
-          <div class="flex-video-wrap">
-            <div class="flex-video"><iframe src="http://www.youtube.com/embed/swcKGCX2Aos?rel=0&amp;controls=0&amp;showinfo=0" frameborder="0" allowfullscreen=""></iframe></div>
+        <div class="flex-image-right">
+          <div class="flex-image-wrap">
+            <div class="flex-image"><img src="https://discordapp.com/assets/7edaed9d86e1b5dd9d4c98484372222b.svg" class="discordview"></div>
           </div>
           <p style="max-width: 300px" class="muted-extra"><span class="black">Picture Above:</span> This is Discord the replacement to skype,teamviewer,curse etc.</p>
         </div>
