--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="top-rect"></div>
   <header><div class="headerimg"><center>
   <img src="https://imgur.com/0lSBAAu.png" class="headeravatar"></center>
-  <svg class="menu-svg" fill="#000000" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+  <svg class="menu-svg" fill="#fff" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
     <path d="M0 0h24v24H0z" fill="none"></path>
     <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"></path>
 </svg>
