--- a/index.html
+++ b/index.html
@@ -78,5 +78,16 @@
       </div>
     </section>
   
+  <footer class="white tint-reversed">
+      <div class="constrainer">
+        <ul class="link-list text-center">
+          <li><a href="https://github.com/0mniscient/Discord-Themes">Github</a></li>
+          <li><a href="https://betterdiscord.net/home/">BetterDiscord</a></li>
+          <li><a href="https://discordapp.com/">Discord</a></li>
+          <li style="color: hsla(0,0%,100%,0.4)">Copyright 2016</li>
+        </ul>
+      </div>
+    </footer>
+  
 </body>
 </html>
