--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
       </div>
     </section>
     
-  <section class="popular-episodes tint"><svg class="arc-svg" viewBox="0 0 1440 69" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+  <section class="popular-themes tint"><svg class="arc-svg" viewBox="0 0 1440 69" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
     <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
         <path d="M1440,69.0315425 L1440,0 L0,0 L0,69.0315425 C233.264983,25.0227325 473.943868,2 720,2 C966.056132,2 1206.73502,25.0227325 1440,69.0315425 Z" id="Combined-Shape"></path>
     </g>
@@ -58,13 +58,13 @@
       <div class="constrainer">
         <div class="section-head">Discord Themes <span>Free!</span></div>
         <hr class="section-title-rule">
-        <div class="popular-list"><div href="" class="video-unit">
+        <div class="popular-list"><div href="" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/vvjkzd.png"></div>
-                    <div class="desc">KMS🏻</div></div><div href="" class="video-unit">
+                    <div class="desc">KMS🏻</div></div><div href="" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/qtoppj.png"></div>
-                    <div class="desc">A theme just for princesses 👸🏻 </div></div><div href="" class="video-unit">
+                    <div class="desc">A theme just for princesses 👸🏻 </div></div><div href="" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/swuofs.jpg"></div>
-                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></div><div href="" class="video-unit">
+                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></div><div href="" class="theme-unit">
                     <div class="media"><img src="https://i.imgur.com/lPdrdDe.png"></div>
                     <div class="desc">A cozy modern dark theme most time ever spent on a theme. 98% of the theme darkened like it should be.</div>
         </div>
