--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-    <link href="https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/css/lightbox.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="stylesheets/lightbox.css" media="screen">
   </head>
-  <script src="https://raw.githubusercontent.com/lokesh/lightbox2/master/dist/js/lightbox-plus-jquery.js"></script>
+  <script src="js/lightbox-plus-jquery.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
 <body>
   
