--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </div>
     </section>
-  
+  <a href="https://i.imgur.com/lPdrdDe.png" data-lightbox="image-1" data-title="My caption">Image #1</a>
   <footer class="white tint-reversed">
       <div class="constrainer">
         <ul class="link-list text-center">
