--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@
         </div>
       </div>
     </section>
-  <a href="https://i.imgur.com/lPdrdDe.png" data-lightbox="image-1" data-title="My caption">Image #1</a>
+  
+  <a class="example-image-link" href="https://i.imgur.com/lPdrdDe.png" data-lightbox="example-set" data-title="Click the right half of the image to move forward."><img class="example-image" src="https://i.imgur.com/lPdrdDe.png" alt="test"></a>
+  
   <footer class="white tint-reversed">
       <div class="constrainer">
         <ul class="link-list text-center">
