--- a/index.html
+++ b/index.html
@@ -61,16 +61,16 @@
       <div class="constrainer">
         <div class="section-head">Discord Themes <span>Free!</span></div>
         <hr class="section-title-rule">
-        <div class="popular-list"><div href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Aesthetic%20Discord.theme.css" class="theme-unit">
+        <div class="popular-list"><a href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Aesthetic%20Discord.theme.css" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/vvjkzd.png" data-lightbox="themepreview"></div>
-                    <div class="desc">KMS🏻</div></div><div href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Princess.theme.css"" class="theme-unit">
+                    <div class="desc">KMS🏻</div></a><a href=https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Princess.theme.css"" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/qtoppj.png" data-lightbox="themepreview"></div>
-                    <div class="desc">A theme just for princesses 👸🏻 </div></div><div href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css" class="theme-unit">
+                    <div class="desc">A theme just for princesses 👸🏻 </div></a><a href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Reborn.theme.css" class="theme-unit">
                     <div class="media"><img src="https://a.pomf.cat/swuofs.jpg" data-lightbox="themepreview"></div>
-                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></div><div href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Rebirth.theme.css" class="theme-unit">
+                    <div class="desc">A cold, dark & winter like theme. Darkened Discord's UI a bit and implemented a nice dark background image.</div></a><a href="https://raw.githubusercontent.com/0mniscient/Discord-Themes/master/Themes/Discord%20Rebirth.theme.css" class="theme-unit">
                     <div class="media"><img src="https://i.imgur.com/lPdrdDe.png" data-lightbox="themepreview"></div>
                     <div class="desc">A cozy modern dark theme most time ever spent on a theme. 98% of the theme darkened like it should be.</div>
-        </div>
+        </a>
       </div>
     </section>
   
