--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="js/lightbox-plus-jquery.js"></script>
   <script src="js/Javascripts.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-<body>
+<body data-gr-c-s-loaded="true">
   
   <div class="top-rect"></div>
   <header><div class="headerimg"><center>
