--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
 
               <div class="double-line">Github repo<span>make discord better!</span></div></a></li>
           <li>
+            
+            <li><a href="https://0mniscient.github.io/docs"> <img src="http://www.freeiconspng.com/uploads/book-icon-black-good-galleries--24.jpg" class="github"></img>
+
+              <div class="double-line">Docs<span>BetterDiscord Help Docs</span></div></a></li>
+          <li>
+            
             <hr>
           </li>
           <li><a href="https://betterdiscord.net/home/"> <img src="https://betterdiscord.net/content/img/fav.jpg" class="betterdiscord">
