--- a/docs.html
+++ b/docs.html
@@ -7,15 +7,15 @@
 <meta name="description" content="">
 <meta name="keywords" content=" ">
 <title>Red documentation  | Red-DiscordBot documentation and tutorials</title>
-<link rel="stylesheet" href="https://twentysix26.github.io/Red-Docs/css/syntax.css">
+<link rel="stylesheet" href="doc_files/syntax.css">
 
 
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="doc_files/font-awesome.min.css">
 <!--<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">-->
-<link rel="stylesheet" href="https://twentysix26.github.io/Red-Docs/css/modern-business.css">
-<link rel="stylesheet" href="https://twentysix26.github.io/Red-Docs/css/lavish-bootstrap.css">
-<link rel="stylesheet" href="https://twentysix26.github.io/Red-Docs/css/customstyles.css">
-<link rel="stylesheet" href="https://twentysix26.github.io/Red-Docs/css/theme-blue.css">
+<link rel="stylesheet" href="doc_files/modern-business.css">
+<link rel="stylesheet" href="doc_files/lavish-bootstrap.css">
+<link rel="stylesheet" href="doc_filescustomstyles.css">
+<link rel="stylesheet" href="doc_files/theme-blue.css">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
