--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 </svg>
               <div class="double-line">Home<span>Discord Themes</span></div></a></li>
           
-          <li><a href="https://0mniscient.github.io/docs.html"> <img src="http://www.freeiconspng.com/uploads/book-icon-black-good-galleries--24.jpg" class="github"></img>
+          <li><a href="https://0mniscient.github.io/docs"> <img src="http://www.freeiconspng.com/uploads/book-icon-black-good-galleries--24.jpg" class="github"></img>
 
               <div class="double-line">Docs<span>BetterDiscord Help Docs</span></div></a></li>
           <li>
