--- a/docs.html
+++ b/docs.html
@@ -146,7 +146,7 @@
                                 searchInput: document.getElementById('search-input'),
                                 resultsContainer: document.getElementById('results-container'),
                                 dataSource: 'doc_files/search.json',
-                                searchResultTemplate: '<li><a href="{url}" title="Red documentation">{title}</a></li>',
+                                searchResultTemplate: '<li><a href="{url}" title="Omni documentation">{title}</a></li>',
                     noResultsText: 'No results found.',
                             limit: 10,
                             fuzzy: true,
@@ -469,12 +469,6 @@ $('#toc').on('click', 'a', function() {
 
 <ul>
   <li><a href="https://twentysix26.github.io/Red-Docs/red_guide_troubleshooting/">Troubleshooting</a></li>
-</ul>
-
-<h2 id="cogs">Cogs</h2>
-
-<ul>
-  <li><a href="https://twentysix26.github.io/Red-Docs/red_cog_how_to_publish/">Publishing cogs</a></li>
 </ul>
 
 
