--- a/docs.html
+++ b/docs.html
@@ -92,7 +92,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="fa fa-home fa-lg navbar-brand" href="https://twentysix26.github.io/Red-Docs/">&nbsp;<span class="projectTitle"> Red-Docs</span></a>
+            <a class="fa fa-home fa-lg navbar-brand" href="https://twentysix26.github.io/Red-Docs/">&nbsp;<span class="projectTitle"> Omni Docs</span></a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
