--- a/docs.html
+++ b/docs.html
@@ -375,8 +375,8 @@ $('#toc').on('click', 'a', function() {
 
     
 
-  <p>Red is in continuous development and new features get added all the time. Stay tuned by <a href="https://discord.gg/0k4npTwMvTpv9wrh">joining the official server</a>!
-<a href="https://discord.gg/0k4npTwMvTpv9wrh"><img src="https://discordapp.com/api/servers/133049272517001216/widget.png?style=banner5" /></a></p>
+  <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href="#">joining the official server</a>!
+<a href="#"><img src="https://discordapp.com/api/servers/86004744966914048/widget.png?style=banner5" /></a></p>
 
 <h2 id="installation">Installation</h2>
 
@@ -387,7 +387,7 @@ $('#toc').on('click', 'a', function() {
     <p><a href="https://twentysix26.github.io/Red-Docs/red_win_requirements/">Windows Requirements</a> (<strong>do this first!</strong>)</p>
   </li>
   <li>
-    <p><a href="https://twentysix26.github.io/Red-Docs/red_install_win/">Installing Red</a></p>
+    <p><a href="https://twentysix26.github.io/Red-Docs/red_install_win/">Installing BetterDiscord</a></p>
   </li>
 </ul>
 
