--- a/about.html
+++ b/about.html
@@ -254,7 +254,7 @@ $('#toc').on('click', 'a', function() {
 <footer>
             <div class="row">
                 <div class="col-lg-12 footer">
-               &copy;2016 Red-DiscordBot. All rights reserved. <br />
+               &copy;2016 Omni Docs. All rights reserved. <br />
                 </div>
             </div>
 </footer>
