--- a/docs.html
+++ b/docs.html
@@ -363,28 +363,25 @@ $('#toc').on('click', 'a', function() {
 
 <ul>
   <li>
-    <p><a href="#">Windows Requirements</a> (<strong>do this first!</strong>)</p>
+    <p><a href="#">Windows Requirements</a> (<strong>Do this first!</strong>)</p>
   </li>
   <li>
     <p><a href="#">Installing BetterDiscord</a></p>
   </li>
 </ul>
 
-<h3 id="linux">Linux</h3>
+<h3 id="linux">Mac</h3>
 
 <ul>
   <li>
-    <p><a href="#">How to install on Linux, general steps</a></p>
-  </li>
-  <li>
-    <p><a href="#">Autorestarting (upstart)</a></p>
+    <p><a href="#">How to install on Mac</a></p>
   </li>
 </ul>
 
-<h3 id="mac">Mac</h3>
+<h3 id="mac">Linux</h3>
 
 <ul>
-  <li><a href="#">How to install on Mac</a></li>
+  <li><a href="#">How to install on Linux</a></li>
 </ul>
 
 <h2 id="how-to-use">How to use</h2>
