--- a/docs.html
+++ b/docs.html
@@ -350,7 +350,7 @@ $('#toc').on('click', 'a', function() {
   <p>BetterDiscord is in continuous development and new features get added all the time to better Discord to our needs. Stay tuned by <a href="#">joining the official server</a>!
 <a href="#"><img src="https://discordapp.com/api/servers/86004744966914048/widget.png?style=banner5" /></a></p>
 
-<h2 id="installation">BetterDiscord Installation</h2>
+<h2 id="installation">Installation</h2>
 
 <h3 id="windows">Windows</h3>
 
