--- a/install_win.html
+++ b/install_win.html
@@ -337,19 +337,12 @@ $('#toc').on('click', 'a', function() {
 
     
 <blockquote>
-  <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update that's how you know.</p>
+  <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update that's how you know you will have to re-install BetterDiscord.</p>
 </blockquote>
     
 
 <h2 id="installation">Installation</h2>
 
-<h3 id="windows">Windows</h3>
-
-<ul>
-  <li>
-    <p><a href="#">Installing BetterDiscord</a></p>
-  </li>
-</ul>
 
 <h3 id="linux">Mac</h3>
 
