--- a/install_win.html
+++ b/install_win.html
@@ -337,7 +337,7 @@ $('#toc').on('click', 'a', function() {
 
     
 <blockquote>
-  <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update that's how you know you will have to re-install BetterDiscord.</p>
+  <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update unlike a mini update.</p>
 </blockquote>
     
 
