--- a/install_win.html
+++ b/install_win.html
@@ -344,41 +344,10 @@ $('#toc').on('click', 'a', function() {
 <h2 id="installation">Installation</h2>
 
 
-<h3 id="linux">Mac</h3>
-
-<ul>
-  <li>
-    <p><a href="#">How to install on Mac</a></p>
-  </li>
-</ul>
-
-<h3 id="mac">Linux</h3>
-
-<ul>
-  <li><a href="#">How to install on Linux</a></li>
-</ul>
-
-<h2 id="how-to-use">How to use</h2>
-
-<ul>
-  <li>
-    <p><a href="#">Some general tips</a></p>
-  </li>
-  <li>
-    <p><a href="#">PluginAPI</a></p>
-  </li>
-</ul>
-
-<h2 id="common-issues">Common issues</h2>
-<p>For installation and general issues:</p>
-
-<ul>
-  <li><a href="#">Troubleshooting</a></li>
-</ul>
-
 
 <div class="tags">
-    
+     <b>Tags: </b>
+    <a href="https://0mniscient.github.io/win_install.html" class="btn btn-default navbar-btn cursorNorm" role="button">win_install</a>
 </div>
 
     
