--- a/install_win.html
+++ b/install_win.html
@@ -343,7 +343,7 @@ $('#toc').on('click', 'a', function() {
 
 <h2 id="installation">Installation</h2>
 
-
+<div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Remember this is undergoing contruction!</div>
 
 <div class="tags">
      <b>Tags: </b>
