--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           </li>
           <li><a href="https://betterdiscord.net/home/"> <img src="https://betterdiscord.net/content/img/fav.jpg" class="betterdiscord">
 
-              <div class="double-line">YouTube Videos<span>Hundreds for free</span></div></a></li>
+              <div class="double-line">BetterDiscord<span>Theme/Plugin Loader</span></div></a></li>
           <a href="https://discordapp.com/"> 
 <img src="https://discordapp.com/assets/2c21aeda16de354ba5334551a883b481.png" class="discord">
               <div class="double-line">Discordapp<span>App for gamers</span></div></a>
