--- a/install_win.html
+++ b/install_win.html
@@ -340,10 +340,11 @@ $('#toc').on('click', 'a', function() {
   <p><b>Disclaimer:</b> You will have to re-install BetterDiscord everytime there is a big Discord update. How do you know if it's a big update? On the start of Discord it will start downloading the update unlike a mini update.</p>
 </blockquote>
     
+<div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Remember this is undergoing contruction!</div>
 
 <h2 id="installation">Installation</h2>
 
-<div class="alert alert-warning" role="alert"><i class="fa fa-warning"></i> <b>Important: </b>Remember this is undergoing contruction!</div>
+<p>First thing first head on over to the <a href="https://betterdiscord.net/home/">BetterDiscord</a> site.</p>
 
 <div class="tags">
      <b>Tags: </b>
