--- a/install_win.html
+++ b/install_win.html
@@ -346,6 +346,13 @@ $('#toc').on('click', 'a', function() {
 
 <p>First thing first head on over to the <a href="https://betterdiscord.net/home/">BetterDiscord</a> site.</p>
 
+<ul>
+  <li>
+    <p>Click the big download button for windows.<br />
+<img src="https://imgur.com/UcEPr6n.png" alt="Download BetterDiscord" /></p>
+  </li>
+  <li>
+
 <div class="tags">
      <b>Tags: </b>
     <a href="https://0mniscient.github.io/win_install.html" class="btn btn-default navbar-btn cursorNorm" role="button">win_install</a>
