--- a/install_win.html
+++ b/install_win.html
@@ -352,6 +352,11 @@ $('#toc').on('click', 'a', function() {
 <img src="https://imgur.com/UcEPr6n.png" alt="Download BetterDiscord" /></p>
   </li>
   <li>
+    <p>Extract the zip file and you should see this.</p>
+  </li>
+</ul>
+
+<p><img src="https://i.imgur.com/lboTcWb.png" alt="BetterDiscord Contents" /></p>
 
 <div class="tags">
      <b>Tags: </b>
