--- a/install_win.html
+++ b/install_win.html
@@ -355,7 +355,11 @@ $('#toc').on('click', 'a', function() {
     <p>Extract the zip file and you should see this.</p>
   </li>
 </ul>
-
+<p><img src="https://i.imgur.com/lboTcWb.png" alt="BetterDiscord Contents" /></p>
+<li>
+    <p>Double click the file called <code class="highlighter-rouge">BetterDiscordWI.exe</code>.</p>
+  </li>
+</ul>
 <p><img src="https://i.imgur.com/lboTcWb.png" alt="BetterDiscord Contents" /></p>
 
 <div class="tags">
