--- a/install_win.html
+++ b/install_win.html
@@ -357,10 +357,10 @@ $('#toc').on('click', 'a', function() {
 </ul>
 <p><img src="https://i.imgur.com/lboTcWb.png" alt="BetterDiscord Contents" /></p>
 <li>
-    <p>Double click the file called <code class="highlighter-rouge">BetterDiscordWI.exe</code>.</p>
+    <p>Double click the file called <code class="highlighter-rouge">BetterDiscordWI.exe</code> then hit "run" and do the following.</p>
   </li>
 </ul>
-<p><img src="https://i.imgur.com/lboTcWb.png" alt="BetterDiscord Contents" /></p>
+<p><img src="https://i.imgur.com/i4wG9TO.gif" alt="BetterDiscord Set Up Guide" /></p>
 
 <div class="tags">
      <b>Tags: </b>
