--- a/install_win.html
+++ b/install_win.html
@@ -361,6 +361,15 @@ $('#toc').on('click', 'a', function() {
   </li>
 </ul>
 <p><img src="https://i.imgur.com/i4wG9TO.gif" alt="BetterDiscord Set Up Guide" /></p>
+<li>
+    <p>Now you have installed BetterDiscord congratulations!</p>
+  </li>
+</ul>
+<p><img src="http://i.imgur.com/QQDYIvm.png" alt="BetterDiscord on Discord" /></p>
+
+<h2 id="updates">Updates</h2>
+
+<p>Every time there is an update for BetterDiscord you will have to re-install it so just go through this process again</p>
 
 <div class="tags">
      <b>Tags: </b>
