--- a/install_win.html
+++ b/install_win.html
@@ -373,7 +373,8 @@ $('#toc').on('click', 'a', function() {
 
 <div class="tags">
      <b>Tags: </b>
-    <a href="https://0mniscient.github.io/win_install.html" class="btn btn-default navbar-btn cursorNorm" role="button">win_install</a>
+    <a href="https://0mniscient.github.io/install_win.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_win</a>
+    <a href="https://0mniscient.github.io/install_mac.html" class="btn btn-default navbar-btn cursorNorm" role="button">install_mac</a>
 </div>
 
     
