--- a/install_mac.html
+++ b/install_mac.html
@@ -346,6 +346,13 @@ $('#toc').on('click', 'a', function() {
 
 <p>First thing first head on over to the <a href="https://betterdiscord.net/home/">BetterDiscord</a> site.</p>
 
+<ul>
+  <li>
+    <p>Click the big download button for mac.<br />
+<img src="https://imgur.com/ZJrKD7b.png" alt="Download BetterDiscord" /></p>
+  </li>
+
+<p>I can't help with the rest as I don't have a mac if you would like to volunteer to help with this installation for mac users PM me @Omniscient in the BetterDiscord server.</p>
 <h2 id="updates">Updates</h2>
 
 <p>Every time there is an update for BetterDiscord you will have to re-install it so just go through this process again</p>
